--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ function ProperGreeting()
       <a href="#dev">development</a>
       <a href="#research">research</a>
       <a href="#publications">publications</a>
+      <a href="#reading">reading list</a>
     </div>
   </div>
 
@@ -74,7 +75,8 @@ function ProperGreeting()
           <p><span id="greet"></span>, my name is Illya Nayshevsky. Welcome to my personal page. I have am a registered investment advisor and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>.
             <br>
             <br>
-            I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications, which helps the glass stay clean and the underlying solar panel efficient. Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, which is a quant investment advisory firm powered by machine learning and big data.
+            I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications as well as anti-reflective coatings. These coatings help make solar panels more efficeint by stopping dust from accumulating on their surface. Anti-reflective coatings help solar panels get more light.
+            Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, which is a quant investment advisory firm powered by machine learning and big data.
             <br>
             <br>
             I like to travel and read. You can check out my IG for some of the most recent travel pics, and my reading list.
