updated web safe font, and added a few more notes about myself.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ function ProperGreeting()
             Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, which is a quant investment advisory firm powered by machine learning and big data.
             <br>
             <br>
+            Currently I am interested in: machine learning models trained on backtest data (LSTM on TF), blockchain developement (Solidity), and automated trade excecution using IBKR platform.
+            <br>
+            <br>
+            I'm proficient in python and C#, and am quite nimble with Numpy/pandas, scikit-learn, TensorFlow, OpenCV, Matplotlib/ Plotly/ hvPlot and Google Cloud Platform. I'm in terested in perfecting my Amazon AWS and Solidity skills. I'm an avid user of jupyter notebooks for developement and GCP deployments for production.
+            <br>
+            <br>
             I like to travel and read. You can check out my IG for some of the most recent travel pics, and my reading list.
           </div>
           <div class="about-column-pic">
