fixed youtube video alignment

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ function ProperGreeting()
           ... or watch me talk about my research below:
 
           <!--youtube video-->
-          <section class="youtube">
-            <iframe id="video" src="https://www.youtube.com/embed/B9bbmg-olKo?start=1218" frameborder="0" allowfullscreen class="video"></iframe>
-          </section>
+          <div class="youtube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/B9bbmg-olKo?start=1216" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
 
 
