locked contact bar on the bottom of the page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ function ProperGreeting()
       <a href="#research">research</a>
       <a href="#publications">publications</a>
       <a href="#reading">reading list</a>
+      <a href="#contact">contact me</a>
     </div>
   </div>
 
@@ -308,6 +309,7 @@ function ProperGreeting()
       </div>
 
       <!-- footer -->
+      <a name="contact"></a>
       <div class="nav-footer">
         <div class="flex-grid-footer">
           <div class="contact-me">contact me: </div>
