--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function ProperGreeting()
 
         <div class="about-column">
           <p><h2>about me.</h2></p>
-          <p><span id="greet"></span>, my name is Illya Nayshevsky. Welcome to my personal page. I am a registered investment advisor and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>.
+          <p><span id="greet"></span>, my name is Illya Nayshevsky. Welcome to my personal page. I am a registered investment advisor in NY and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>.
             <br>
             <br>
             I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications as well as anti-reflective coatings. These coatings help make solar panels more efficeint by stopping dust from accumulating on their surface. Anti-reflective coatings help solar panels get more light.
