--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <!-- end header -->
 
       <!-- start about me -->
-      <a  id="about"></a>
-      <div class="container features">
-      <div class="row">
+      <a  name="about"></a>
+        <div class="container features">
+        <div class="row">
 
           <div class="col-lg-6 col-md-6 col-sm-8">
               <h3 class="feature-title">about me</h3>
@@ -92,7 +92,7 @@
       <!-- end about me -->
 
       <!-- start my projects -->
-      <a  id="projects">
+      <a  name="projects">
         <div class="container features">
           <h3 class="feature-title">my projects</h3>
           <h5><i>here are some of my projects that are available to the public:<br><br></i></h5>
