--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="collapse navbar-collapse" id="main-navigation">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#about" data-toggle="collapse" data-target=".navbar-collapse.show">about</a>
+                <a class="nav-link" href="#about">about</a>
             </li>
             <li class="nav-item" >
-                <a class="nav-link" href="#projects" data-toggle="collapse" data-target=".navbar-collapse.show">projects</a>
+                <a class="nav-link"  href="#projects">projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#research" data-toggle="collapse" data-target=".navbar-collapse.show">research</a>
+                <a class="nav-link" href="#research">research</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#pubs" data-toggle="collapse" data-target=".navbar-collapse.show">publications</a>
+                <a class="nav-link" href="#publications">publications</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#read" data-toggle="collapse" data-target=".navbar-collapse.show">reading list</a>
+                <a class="nav-link" href="#books">books</a>
             </li>
           </ul>
         </div>
@@ -115,10 +115,10 @@
             </div>
             
             <div class="col-lg-4 col-md-4 col-sm-12">
+              <p>More projects available on my GitHub.</p>
               <a href="https://github.com/illyanyc" style="text-decoration: none;">
                 <img src="img/logos/github.png" class="img-fluid" width="100%">
               </a>
-              <p>More projects available on my GitHub.</p>
             </div>
 
           </div>
