--- a/index.html
+++ b/index.html
@@ -14,28 +14,15 @@
       <meta name='copyright' content='https://creativecommons.org/licenses/by-nc/4.0/'/>
       <meta name="keywords" content="technology, chemistry, python, C#, polymer, solar panels, solar energy, metamaterials, hydrophobic, machine learning, computer vision"/>
       <link rel="stylesheet" type="text/css" href="css/main.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
 
     <body>
       <!-- import bootstrap -->
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+      <script src="js/jquery-3.5.1.slim.min.js"></script>      
+      <script src="js/bootstrap.min.js"></script>
       <script src="js/main.js"></script>
 
-      <script>
-        $('.dropdown-menu a.dropdown-toggle').on('click', function(e) {
-          if (!$(this).next().hasClass('show')) {
-              $(this).parents('.dropdown-menu').first().find('.show').removeClass("show");
-          }
-          var $subMenu = $(this).next(".dropdown-menu");
-          $subMenu.toggleClass('show');
-          $(this).parents('li.nav-item.dropdown.show').on('hidden.bs.dropdown', function(e) {
-              $('.dropdown-submenu .show').removeClass("show");
-          });
-          return false;
-      });
-      </script>
 
 
       <!-- start navbar -->
@@ -80,11 +67,11 @@
       <a  name="about">
         <div class="container section">
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-8">
+            <div class="col-md-6 col-sm-8">
               <h3 class="about-title">about me</h3>
               <p>Welcome to my personal page. I am a registered investment advisor in NY and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>. I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications as well as anti-reflective coatings. These coatings help make solar panels more efficeint by stopping dust from accumulating on their surface. Anti-reflective coatings help solar panels get more light. Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, which is a quant investment advisory firm powered by machine learning and big data. Currently I am interested in: machine learning models trained on backtest data (LSTM on TF), blockchain developement (Solidity), and automated trade excecution using IBKR platform. I'm proficient in python and C#, and am quite nimble with Numpy/pandas, scikit-learn, TensorFlow, OpenCV, Matplotlib/ Plotly/ hvPlot and Google Cloud Platform. I'm in terested in perfecting my Amazon AWS and Solidity skills. I'm an avid user of jupyter notebooks for developement and GCP deployments for production. I like to travel and read. You can check out my IG for some of the most recent travel pics, and my reading list.</p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-8">
+            <div class="col-md-4 col-sm-8">
               <h3 class="feature-title"></h3>
               <img src="img/illya.jpg" class="img-fluid rounded-circle">
             </div>
@@ -132,7 +119,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
               <p>More projects available on my GitHub.</p>
               <a href="https://github.com/illyanyc" style="text-decoration: none;">
-                <img src="img/logos/github.png" class="img-fluid" width="100%">
+                <img src="img/github.png" class="img-fluid" width="100%">
               </a>
             </div>
 
@@ -174,7 +161,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="https://doi.org/10.1016/j.solmat.2020.110757">
-                    <img src="img/logos/solmat.png" width="100%">
+                    <img src="img/solmat.png" width="100%">
                   </a>
                 </div>
               </div>
@@ -211,7 +198,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="https://doi.org/10.1109/JPHOTOV.2019.2955559">
-                    <img src="img/logos/ieeejpv.jpg" width="100%">
+                    <img src="img/ieeejpv.jpg" width="100%">
                   </a>
                 </div>
               </div>
@@ -244,7 +231,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="https://doi.org/10.1016/j.solmat.2019.110281">
-                    <img src="img/logos/solmat.png" width="100%">
+                    <img src="img/solmat.png" width="100%">
                   </a>
                 </div>
               </div>
@@ -280,7 +267,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="https://doi.org/10.1109/PVSC.2017.8366777">
-                    <img src="img/logos/ieeejpv.jpg" width="100%">
+                    <img src="img/ieeejpv.jpg" width="100%">
                   </a>
                 </div>
               </div>
@@ -312,7 +299,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="http://www.condensationexperiments.com/WorldBubbleMap/mymap.html">
-                    <img src="img/logos/cuny.png" width="100%">
+                    <img src="img/cuny.png" width="100%">
                   </a>
                 </div>
               </div>
@@ -344,7 +331,7 @@
                 <div class="img">
                   <!-- Link to publication via logo -->
                   <a href="https://doi.org/10.1109/PVSC.2017.8366777">
-                    <img src="img/logos/ieee.jpg" width="100%">
+                    <img src="img/ieee.jpg" width="100%">
                   </a>
                 </div>
               </div>
@@ -376,7 +363,7 @@
               </div>
               <div class="img-auto">
                 <a href="https://www.researchgate.net/profile/Illya-Nayshevsky">
-                  <img src="img/logos/rg.png" width="10%">
+                  <img src="img/rg.png" width="10%">
                 </a>
               </div>
             </div>
@@ -388,30 +375,34 @@
       <!-- start footer -->
       <footer class="page-footer">
         <div class="container section">
-          <div class="container row">
 
-            <!-- facebook -->
-            <div class="col-lg-4 col-md-2 col-sm-auto">
+          <div class="col-lg-5 col-md-1 col-sm-auto">
+            <div class="container row">
+
+              <!-- facebook -->
+              <div class="col">
                 <a href="https://www.facebook.com/profile.php?id=100003375492977">
-                  <img src="img/logos/fb.png" width="80px">
+                  <img src="img/fb.png" width="80px">
                 </a>
-            </div>
-          
-            <!-- instagram -->
-            <div class="col-lg-4 col-md-2 col-sm-auto">
+              </div>
+              <!-- instagram -->
+              <div class="col">
                 <a href="https://www.instagram.com/illya.ny">
-                  <img src="img/logos/ig.png" width="80px">
+                  <img src="img/ig.png" width="80px">
                 </a>
-            </div>
-
-            <!-- linkedin -->
-            <div class="col-lg-5=4 col-md-2 col-sm-auto">
+              </div>
+              <!-- linkedin -->
+              <div class="col">
                 <a href="https://www.linkedin.com/in/illyanayshevskyy/">
-                  <img src="img/logos/ln.png" width="80px">
+                  <img src="img/ln.png" width="80px">
                 </a>
-            </div>
-            
+              </div>
+
+            </div>      
           </div>
+
+          <div class="col-lg-7 col-md-1 col-sm-auto"></div>
+
         </div>  
       </footer>
       <!-- end footer -->
