--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
       <header class="page-header header container-fluid">
   			<div class="overlay"></div>
   			<div class="quote-sec">
-          <p>"<i>The universe is change; our life is what our thoughts make it.</i>"</p>
-          <p>- Marcus Aurelius</p>
+          <p>"<i>The universe is change; our life is what our thoughts make it.</i>" <br> - Marcus Aurelius</p>
   			</div>
   		</header>
       <!-- end header -->
