fixed broken link to article

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="col-sm-auto col-md-auto col-lg-3">
                 <div class="img">
                   <!-- Link to publication via logo -->
-                  <a href="https://doi.org/10.1109/PVSC.2017.8366777">
+                  <a href="https://doi.org/10.1109/JPHOTOV.2018.2882636">
                     <img src="img/ieeejpv.jpg" width="100%">
                   </a>
                 </div>
