--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <header class="page-header header container-fluid">
   			<div class="overlay"></div>
   			<div class="quote-sec">
-          <p>"<i>The universe is change; our life is what our thoughts make it.</i>" <br> - Marcus Aurelius</p>
+          <h5>"<i>The universe is change; our life is what our thoughts make it.</i>"</h5>
+          <p><br> - Marcus Aurelius</p>
   			</div>
   		</header>
       <!-- end header -->
