--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
           <div class="row">
             <div class="col-md-6 col-sm-8">
               <h3 class="about-title">about me</h3>
-              <p>Welcome to my personal page. I am a registered investment advisor in NY and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>. I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications as well as anti-reflective coatings. These coatings help make solar panels more efficeint by stopping dust from accumulating on their surface. Anti-reflective coatings help solar panels get more light. Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, which is a quant investment advisory firm powered by machine learning and big data. Currently I am interested in: machine learning models trained on backtest data (LSTM on TF), blockchain developement (Solidity), and automated trade excecution using IBKR platform. I'm proficient in python and C#, and am quite nimble with Numpy/pandas, scikit-learn, TensorFlow, OpenCV, Matplotlib/ Plotly/ hvPlot and Google Cloud Platform. I'm in terested in perfecting my Amazon AWS and Solidity skills. I'm an avid user of jupyter notebooks for developement and GCP deployments for production. I like to travel and read. You can check out my IG for some of the most recent travel pics, and my reading list.</p>
+              <p>Welcome to my personal page. I am a registered investment advisor in NY and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>. 
+                I have researched superhydrophobic nano-coatings for anti-soiling and self-cleaning solar glass applications as well as anti-reflective coatings. 
+                These coatings help make solar panels more efficeint by stopping dust from accumulating on their surface. 
+                Anti-reflective coatings help solar panels get more light. Currently, I am the CEO, CIO and founder of <a href="https://www.aic.llc/">Alpha Inertia Capital</a>, 
+                which is a quant investment advisory firm powered by machine learning and big data. Currently I am interested in: machine learning, blockchain developement (Solidity), automated trade excecution using IBKR platform. 
+                I'm proficient in python and C#, and am quite nimble with numerous machine learning stacks: scikit-learn, TensorFlow, OpenCV, and various Google Cloud Platform services. I'm interested in perfecting my Amazon AWS and Solidity skills. 
+                I like to travel and read. You can check out my <a href="https://www.instagram.com/illya.ny">Instagram</a> for some of the most recent travel pics, and my reading list is coming soon.</p>
             </div>
             <div class="col-md-4 col-sm-8">
               <h3 class="feature-title"></h3>
@@ -152,7 +158,7 @@
       <a  name="publications">
         <div class="container section">
           <h3 class="section-title">publications</h3>
-          <h5><i>here are some of my projects that are available to the public:<br><br></i></h5>
+          <h5><i>here are my most recent publications:<br><br></i></h5>
           <div class="col">
 
             <!-- 10.1016/j.solmat.2020.110757 -->
@@ -367,6 +373,7 @@
                 </a>
               </div>
             </div>
+
           </div>
         </div>
       </a>
@@ -382,19 +389,19 @@
               <!-- facebook -->
               <div class="col">
                 <a href="https://www.facebook.com/profile.php?id=100003375492977">
-                  <img src="img/fb.png" width="50px">
+                  <img class="img-thumbnail" src="img/fb.png" width="50px">
                 </a>
               </div>
               <!-- instagram -->
               <div class="col">
                 <a href="https://www.instagram.com/illya.ny">
-                  <img src="img/ig.png" width="50px">
+                  <img class="img-thumbnail" src="img/ig.png" width="50px">
                 </a>
               </div>
               <!-- linkedin -->
               <div class="col">
                 <a href="https://www.linkedin.com/in/illyanayshevskyy/">
-                  <img src="img/ln.png" width="50px">
+                  <img class="img-thumbnail" src="img/ln.png" width="50px">
                 </a>
               </div>
 
