fixed email link

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
               <!-- email -->
               <div class="col">
-                <a href="illya.nayshevsky@gmail.com">
+                <a href="mailto: illya.nayshevsky@gmail.com">
                   <img class="img shadow-none" src="img/ml.png" width="60px">
                 </a>
               </div>
