--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <a class="nav-link" href="#publications">publications</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#strava">
+<!--                 <a class="nav-link" href="#strava"> -->
                     <a style="display:inline-block;background-color:#FC5200;color:#fff;padding:5px 10px 5px 30px;font-size:11px;font-family:Helvetica, Arial, sans-serif;white-space:nowrap;text-decoration:none;background-repeat:no-repeat;background-position:10px center;border-radius:3px;background-image:url('https://badges.strava.com/logo-strava-echelon.png')" href='https://strava.com/athletes/47768339' target="_clean">
                     Follow me on
                     <img src='https://badges.strava.com/logo-strava.png' alt='Strava' style='margin-left:2px;vertical-align:text-bottom' height=13 width=51 />
                     </a>
-                </a>
+<!--                 </a> -->
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" href="#books">books</a>
