--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="row">
             <div class="col-md-6 col-sm-8">
               <h3 class="about-title">about me</h3>
-              <p>Welcome to my personal page. I am a registered investment advisor in NY and hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>.</p>
+              <p>Welcome to my personal page. I am a data scientist and a registered investment advisor in NY and I also hold a Ph.D. in chemistry from <a href="https://www.gc.cuny.edu/home">City University of New York</a>.</p>
                 
               <p>I am an egineer at <a href="https://www.peopledatalabs.com/">People Data Labs</a>.
                 
