--- a/illya-nayshevsky.html
+++ b/illya-nayshevsky.html
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="illya-nayshevsky.html" data-home-page-title="illya nayshevsky" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-2960"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-2960"><div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-custom-font u-text u-text-default u-text-1">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" href="illya-nayshevsky.html">illya nayshevsky, ph.d.</a>
         </h3>
@@ -304,4 +304,5 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <p class="u-small-text u-text u-text-variant u-text-1">2023&nbsp;<b>©</b>&nbsp;Copyright | Illya Nayshevsky
         </p>
       </div></footer>
+  
 </body></html>
