--- a/illya/illya-nayshevsky.html
+++ b/illya/illya-nayshevsky.html
@@ -116,31 +116,31 @@
     <section class="u-align-center u-clearfix u-section-4" id="sec-bb9d">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-custom-font u-font-raleway u-text u-text-default u-text-1">Hear me speak</h2>
-        <div class="custom-expanded u-layout-horizontal u-list u-list-1">
+        <div class="u-expanded-width u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-1">
                 <img class="u-expanded-width u-image u-image-default u-image-1" alt="" data-image-width="1280" data-image-height="720" src="images/maxresdefault.jpg" data-href="https://www.youtube.com/live/m83-uZ6U_Hg?si=jl65BllBJnXoObCn&amp;t=1816" data-target="_blank">
                 <h4 class="u-custom-font u-font-raleway u-text u-text-2"> AI for developers - The Monthly Dev #33</h4>
                 <p class="u-text u-text-3"> The Monthly Dev brings world-class speakers to empower the developers' community, once a month. Made with ❤️ by daily.dev.</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
+              <div class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-2">
                 <img class="u-expanded-width u-image u-image-default u-image-2" alt="" data-image-width="1280" data-image-height="720" src="images/maxresdefault1.jpg" data-href="https://www.youtube.com/watch?v=dVIdVwQ1bPk&amp;ab_channel=ThisDotMedia" data-target="_blank">
                 <h4 class="u-custom-font u-font-raleway u-text u-text-4"> State of AI Tooling Summer 2023</h4>
                 <p class="u-custom-font u-font-raleway u-text u-text-5"> The State of AI Tooling will explore the various tools that are available for building, testing, and deploying AI models.</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3">
+              <div class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-3">
                 <img class="u-expanded-width u-image u-image-default u-image-3" alt="" data-image-width="1280" data-image-height="720" src="images/maxresdefault2.jpg" data-href="https://youtu.be/B9bbmg-olKo?si=ro7LKlUWy8PL9lME&amp;t=1220" data-target="_blank">
                 <h4 class="u-custom-font u-font-raleway u-text u-text-6"> Inside The Graduate Center: A Dissertation Showcase</h4>
-                <p class="u-custom-font u-font-raleway u-text u-text-7"> Six doctoral students from diverse disciplines make short presentations, describing their research in just three minutes each.&nbsp;</p>
+                <p class="u-custom-font u-font-raleway u-text u-text-7"> Six doctoral students from diverse disciplines make short presentations...</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-4">
+              <div class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-4">
                 <img class="u-expanded-width u-image u-image-default u-image-4" alt="" data-image-width="2836" data-image-height="1875" src="images/90fc53c9.svg">
                 <h4 class="u-text u-text-8">Sample Headline</h4>
                 <p class="u-text u-text-9">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
@@ -159,7 +159,7 @@ c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.3
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
             </span>
           </a>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
+          <a class="u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
             <span aria-hidden="true">
               <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
@@ -362,10 +362,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
 
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a6ca"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">2024&nbsp;<b>©</b>&nbsp;Copyright | Illya Nayshevsky
+        <p class="u-small-text u-text u-text-variant u-text-1">2023&nbsp;<b>©</b>&nbsp;Copyright | Illya Nayshevsky
         </p>
-      </div>
-    </footer>
-  </body>
-</html>
+      </div></footer>
+</body></html>
 <!-- improve intellectually, spiritually, financially, socially -->
